# typedShmem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  design.txt  design2.txt  heap_design.txt  pyproject.toml  temp-email.txt  type_descriptor_design.txt  typed_heap_design.txt
CollectionTypes/: ShmemCollection.py  __init__.py  map.py  tuple.py  vector.py
PrimitiveTypes/: PrimitiveDefinitions.py  PrimitiveMapping.py  __init__.py
StreamUtil/: PrimitiveStream.py  StreamAlikeWrapper.py  StreamUtil.py  __init__.py
docs/: Gemfile
docs/_posts/: 2024-10-10-welcome-to-jekyll.markdown
include/: PrintMemoryHelper.h  ShmemAccessor.h  ShmemAccessorPybind11.h  ShmemBase.h  ShmemDict.h  ShmemDict.tcc  ShmemHeap.h  ShmemHeapPybind11.h  ShmemList.h  ShmemList.tcc  ShmemObj.h  ShmemObj.tcc  ShmemPrimitive.h  ShmemPrimitive.tcc  ShmemUtils.h  TypeEncodings.h  p3Heap.h  typeEncodings.h  utils.h  utils.hpp
pytest/: ShmemDict_test.py  ShmemHeap_test.py  ShmemList_test.py  ShmemPrimitive_test.py
python/: ShmemAccessorPybindWrapper.cpp  ShmemAccessorPybindWrapper.h  pybindModule.cpp
python/TypedShmem/: ShmemHeap.py  ShmemObjInitializer.py
ref/: ShmemObjOld.h  rbtree.cpp  serialize.cpp
src/: PrintMemoryHelper.cpp  PybindModule.cpp  ShmemAccessor.cpp  ShmemAccessorPybind11.cpp  ShmemAccessorPybindWrapper.cpp  ShmemBase.cpp  ShmemDict.cpp  ShmemDictNode.cpp  ShmemHeap.cpp  ShmemHeapBlockHeader.cpp  ShmemList.cpp  ShmemObj.cpp  ShmemPrimitive.cpp  ShmemUtils.cpp  TypeEncodings.cpp  main.cpp  pybindModule.cpp
src/TypedShmem/: ShmemAccessor.py  ShmemHeap.py  TypeEncodings.py  Utils.py  __init__.py
test/: ShmemDict_test.cpp  ShmemHeap_test.cpp  ShmemHeap_test.py  ShmemList_test.cpp  ShmemObject_test.cpp  ShmemPrimitive_test.cpp  test_main.cpp
tools/: build_pybind11.sh
