[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "TypedShmem"
version = "0.0.1"
description = "Python bindings for TypedShmem using pybind11"
readme = "README.md"
authors = [{ name = "Yuhao Li", email = "yli2565@wisc.edu" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
sdist.exclude = [".txt", "ref/*", "testenv/*"]
build.targets = ["TypedShmem"]
build.verbose = true
build-dir = "build" # relative to the project root, when you specify this, all intermediate files will be cached and greatly speed up the compile process
cmake.build-type = "Debug" # Specify the CMake build type
install.strip = false # Very important for compiling binary with debug symbols, if not specified, it will remove all debug symbols when "install" to the wheel

